bugfix: fill screen on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -71,7 +71,7 @@ h6 {
   .logo {
     display: flex;
     width: 20%;
-    margin: 5% auto;
+    margin: 2% auto;
     justify-content: center;
   }
 
